gitops/apps/postgres/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-tailnet
  annotations:
    tailscale.com/hostname: postgres-db
    tailscale.com/proxy-class: stable-proxies
  labels:
    app.kubernetes.io/name: postgres
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
