gitops/apps/postgres/pgadmin-ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
